--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "@boom/chronos",
   "version": "0.1.0",
   "main": "index.js",
-  "module": "build/esm/index.js",
-  "types": "build/types/index.d.ts",
+  "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "files": [
-    "build"
+    "dist"
   ],
   "exports": {
     ".": {
-      "import": "./build/esm/index.js",
-      "require": "./build/cjs/index.js"
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
     }
   },
   "scripts": {
