--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,5 @@
     "declarationDir": "./dist/esm/types",
   },
   "include": ["src", "tests/mixins.test.ts"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": ["node_modules", "dist", "tests"]
 }
